# prompt-polyglot

./: .dockerignore  .gitignore  AGENTS.md  AGGRESSIVE-MODE-SUMMARY.md  Cargo.toml  Dockerfile  FINAL-SUMMARY.md  PHASE3-COMPLETE.md  QUICKSTART.md  README.md  TEST-RESULTS.md  VERIFICATION-REPORT.md  aggressive_optimize.py  docker-compose.yml  generate_correct_optimized.py  generate_final_optimized.py  manual_test.py  test_aggressive_rust_patterns.py  test_optimization_goals.py
.github/workflows/: docker.yml  test.yml
data/: atlas.db
docs/: CLAUDE-SKILLS-GUIDE.md  CLAUDE.md  CONSOLIDATED-ARCHITECTURE.md  CONSOLIDATION-SUMMARY.md  CONTRIBUTORS.md  MCP-SERVER-GUIDE.md  README.md  TESTING-STRATEGY.md
examples/: end_to_end_demo.rs  optimized.txt  optimized_aggressive.txt  optimized_v01_old.txt  optimized_v02.txt  populate_atlas.rs  verbose_prompt.txt
migrations/: 001_initial_schema.sql  002_add_patterns_table.sql
scripts/: build_test_corpus.py  download_hf_datasets.py  populate_sample_data.py  quick_test_setup.sh
src/: api.rs  concept_optimizer.rs  concept_resolver.rs  confidence.rs  database.rs  database_optimizer.rs  database_pattern_detector.rs  lib.rs  main.rs  models.rs  optimizer.rs  patterns.rs  protected_regions.rs  surface_selector.rs  tokenizer.rs  tokenizer_registry.rs
tests/: integration_consolidated.rs  mandarin_efficiency_test.rs
web/: Dockerfile  package.json  tsconfig.json
web/src/lib/: config.ts  types.ts
web/src/routes/: +page.server.ts  +page.svelte
